feat: Add tasks price
